--- a/src/app/pages/results/tpl.html
+++ b/src/app/pages/results/tpl.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="results_body" layout="row" layout-wrap layout-padding>
-      <div class="results_item" flex="33" flex-sm="50" flex-xs="100" bindonce ng-repeat="item in $ctrl.meals track by item.id" ng-click="$ctrl.goList()">
+      <div class="results_item" flex="33" flex-sm="50" flex-xs="100" bindonce ng-repeat="item in $ctrl.meals track by item.id">
         <div class="mealWrapper">
           <img bo-src="item.imageURL"></img>
           <div class="mealInfo">
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="mealWrapper hover">
-          <div class="mealInfo">
+          <div class="mealInfo" ng-click="$ctrl.goToDetailsPage($index)">
             <h4 bo-text="item.name"></h4>
             <div class="meal_info" layout="row">
               <div class="name" flex="35"><i class="material-icons">location_on</i>name</div>
@@ -84,7 +84,7 @@
           <div class="price">
             <div bo-text="item.oldPrice"></div>
             <div bo-text="'$' + item.price"></div>
-            <div ng-click="$ctrl.goList()">Add to Cart<i class="material-icons">local_grocery_store</i></div>
+            <div ng-click="$ctrl.addToCart(item, 1)">Add to Cart<i class="material-icons">local_grocery_store</i></div>
           </div>
         </div>
       </div>
