--- a/src/app/components/header/tpl.html
+++ b/src/app/components/header/tpl.html
@@ -19,7 +19,7 @@
         <div id="btn-append-to-body" class="icon" uib-dropdown-toggle>
           <i class="material-icons">local_grocery_store</i><span class="badge" ng-if="$ctrl.cart.count">{{$ctrl.cart.count}}</span> <span class="caret"></span>
         </div>
-        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-body">
+        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-body" ng-if="$ctrl.cart.count">
           <li role="menuitem"><a ui-sref="main.checkout">Action</a></li>
         </ul>
       </div>
