--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -12,7 +12,7 @@
     align-items: center;
   }
   img {
-    margin-top: 25px;
+    // margin-top: 25px;
     width: 100px;
     height: 50px;
     padding-left: 20px;
