--- a/src/app/components/header/tpl.html
+++ b/src/app/components/header/tpl.html
@@ -16,12 +16,15 @@
     </div>
     <div class="logout" ng-show="$ctrl.isLoggedIn()">
       <div class="btn-group shopping" uib-dropdown dropdown-append-to-body>
-        <div id="btn-append-to-body" class="icon" uib-dropdown-toggle>
+        <!-- <div id="btn-append-to-body" class="icon" uib-dropdown-toggle>
           <i class="material-icons">local_grocery_store</i><span class="badge" ng-if="$ctrl.cart.count">{{$ctrl.cart.count}}</span> <span class="caret"></span>
         </div>
         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-body" ng-if="$ctrl.cart.count">
           <li role="menuitem"><a ui-sref="main.checkout">Action</a></li>
-        </ul>
+        </ul> -->
+        <div id="btn-append-to-body" class="icon" ng-click="$ctrl.goToCheckout()">
+          <i class="material-icons">local_grocery_store</i><span class="badge" ng-if="$ctrl.cart.count">{{$ctrl.cart.count}}</span>
+        </div>
       </div>
       <div class="btn-group user" uib-dropdown dropdown-append-to-body>
         <div id="btn-append-to-body" class="icon" uib-dropdown-toggle>
