--- a/src/app/pages/results/index.scss
+++ b/src/app/pages/results/index.scss
@@ -102,145 +102,7 @@
       min-width: 260px;
       position: relative;
       .mealWrapper {
-        &.hover {
-          position: absolute;
-          left: 0;
-          top: 0;
-          opacity: 0;
-          transition: all 700ms;
-          height: calc(100% - 35px);
-          .description {
-            padding-top: 15px;
-            height: 160px;
-          }
-          &:hover {
-            opacity: 1;
-          }
-        }
-        min-height: 300px;
-        border: 1px solid #dedfe1;
-        background-color: #fff;
-        width: 100%;
-        margin-bottom: 30px;
-        .mealImage {
-          width: 100%;
-          background: url($imgpath+'assets/images/meal-dummy.jpg');
-          background-size: cover;
-          background-repeat: no-repeat;
-          height: 150px;
-        }
-        >img{
-          width: 100%;
-          min-height: 203px;
-        }
-        .meal_info {
-          border-bottom: 1px $inactive solid;
-          .name {
-            i {
-              vertical-align: middle;
-            }
-          }
-          .sl {}
-          .vegan {
-            text-align: right;
-            color: $green;
-          }
-        }
-        .mealInfo {
-          padding: 10px;
-          padding-left: 15px;
-          >h4 {
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            line-height: 20px;
-            height: 42px;
-          }
-        }
-        .chefInfo {
-          margin-top: 15px;
-          white-space: nowrap;
-          img {
-            width: 40px;
-            height: 40px;
-            border-radius: 60px;
-          }
-          & > div {
-            display: inline-block;
-            vertical-align: middle;
-          }
-          .chefDetails {
-            font-size: 12px;
-            div:last-child {
-              font-size: 10px;
-            }
-            margin-left: 10px;
-            margin-top: -2px;
-          }
-          .rating {
-            float: right;
-            font-size: 12px;
-            padding-top: 10px;
-            div {
-              display: inline-block;
-              vertical-align: middle;
-            }
-            .material-icons {
-              font-weight: 700;
-              width: 10px;
-              font-size: 12px;
-              vertical-align: middle;
-              color: $themeColor;
-              margin-left: 5px;
-              cursor: pointer;
-            }
-            &.star {
-              >.material-icons {
-                font-size: 16px;
-                margin-left: 0;
-              }
-            }
-          }
-        }
-        .divider {
-          background-color: #dedfe1;
-          width: 100%;
-          height: 1px;
-          margin-top: 10px;
-        }
-        .price {
-          padding: 10px;
-          padding-left: 15px;
-          div {
-            display: inline-block;
-            vertical-align: middle;
-          }
-          div:first-child {
-            color: #dd2c2c;
-            font-size: 18px;
-            text-decoration: line-through;
-          }
-          div:nth-child(2) {
-            font-size: 25px;
-            margin-left: 11px;
-            color: #000;
-          }
-          div:last-child {
-            @extend %txt_5;
-            color: $themeColor;
-            float: right;
-            font-weight: 600;
-            padding-top: 10px;
-            i.material-icons {
-              font-size: 20px;
-              font-weight: 700;
-              cursor: pointer;
-              margin-left: 5px;
-              vertical-align: inherit;
-            }
-          }
-        }
+        @extend %mealWrapper;
       }
     }
   }
