--- a/src/app/pages/home/index.scss
+++ b/src/app/pages/home/index.scss
@@ -202,88 +202,12 @@
       }
     }
     .meals {
-      margin-top: 30px;
-      .mealWrapper {
-        min-height: 300px;
-        border: 1px solid #dedfe1;
-        background-color: #fff;
-        width: 100%;
-        margin-bottom: 30px;
-        >img{
-          width: 100%;
-          min-height: 203px;
-        }
-        .mealImage {
-          width: 100%;
-          background: url($imgpath+'assets/images/meal-dummy.jpg');
-          background-size: cover;
-          background-repeat: no-repeat;
-          height: 150px;
-        }
-        .mealInfo {
-          padding: 10px;
-          padding-left: 15px;
-          >h4 {
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            line-height: 20px;
-            height: 42px;
-          }
-          // column-count: 2;
-          // column-gap: 20px;
-          // -moz-column-count: 2;
-          // -moz-column-gap: 20px;
-          // -webkit-column-count: 2;
-          // -webkit-column-gap: 20px;
-          // height: 150px;
-          // padding-bottom: 10px;
-        }
-        .chefInfo {
-          margin-top: 15px;
-          white-space: nowrap;
-          & > div {
-            display: inline-block;
-            vertical-align: middle;
-          }
-        }
-        .divider {
-          background-color: #dedfe1;
-          width: 100%;
-          height: 1px;
-          margin-top: 10px;
-        }
-        .price {
-          padding: 10px;
-          padding-left: 15px;
-          div {
-            display: inline-block;
-            vertical-align: middle;
-          }
-          div:first-child {
-            color: #dd2c2c;
-            font-size: 18px;
-            text-decoration: line-through;
-          }
-          div:nth-child(2) {
-            font-size: 25px;
-            margin-left: 11px;
-            color: #000;
-          }
-          div:last-child {
-            color: $themeColor;
-            float: right;
-            font-size: 12px;
-            padding-top: 10px;
-            i.material-icons {
-              font-size: 12px;
-              font-weight: 700;
-              cursor: pointer;
-              margin-left: 5px;
-              vertical-align: inherit;
-            }
-          }
+      // margin-top: 30px;
+      .meal {
+        min-width: 260px;
+        position: relative;
+        .mealWrapper {
+          @extend %mealWrapper;
         }
       }
     }
@@ -303,11 +227,14 @@
       }
       .carousel {
         width: 100%;
-        height: 300px;
-        background: url($imgpath+'assets/images/carousel-image-2.png');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-color: #f6f0d6;
+        // height: 300px;
+        // background: url($imgpath+'assets/images/carousel-image-2.png');
+        // background-size: cover;
+        // background-repeat: no-repeat;
+        // background-color: #f6f0d6;
+        .flexslider{
+          margin-bottom: 0;
+        }
       }
     }
     .offerContainer {
